done: edit detail quiz and fix some bug on validate question

--- a/test.html
+++ b/test.html
@@ -7,13 +7,13 @@
     <style>
 
 .profile-image { border-top-left-radius: 50% 50%; border-top-right-radius: 50% 50%; border-bottom-right-radius: 50% 50%; border-bottom-left-radius: 50% 50%; }
-
+        .test {
+            overflow-wrap: break-word;
+        }
      
     </style>
 </head>
 <body>
-    <div class="profile-image">
-        <img src="https://media.discordapp.net/attachments/908983717379334154/1118923747957686292/S__189825029.jpg">
-    </div>
+    <input class="test" type="text">
 </body>
 </html>
